added missing gif for the steps in the documentation

--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -993,7 +993,7 @@ import '../styles/custom.css';
         <div class="story-slide-inner">
           <div class="story-visual">
             <div class="story-visual-container">
-              <img src="/astonish/images/community-loops.png" onerror="this.src='/astonish/images/flow-visual.png'" alt="Community sharing flows with tap mechanism" />
+              <img src="/astonish/images/community-taps.gif" onerror="this.src='/astonish/images/flow-visual.png'" alt="Community sharing flows with tap mechanism" />
             </div>
           </div>
           <div class="story-text">
