small fix in the yaml

--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -912,9 +912,12 @@ import '../styles/custom.css';
     <span class="code-prop">prompt:</span> <span class="code-string">'Search for: &#123;query&#125;'</span>
     <span class="code-prop">tools:</span> <span class="code-string">true</span>
 <span class="code-key">flow:</span>
-  - <span class="code-prop">from:</span> <span class="code-string">START</span> <span class="code-prop">to:</span> <span class="code-string">get_query</span>
-  - <span class="code-prop">from:</span> <span class="code-string">get_query</span> <span class="code-prop">to:</span> <span class="code-string">search</span>
-  - <span class="code-prop">from:</span> <span class="code-string">search</span> <span class="code-prop">to:</span> <span class="code-string">END</span>`} /></div>
+  - <span class="code-prop">from:</span> <span class="code-string">START</span>
+    <span class="code-prop">to:</span> <span class="code-string">get_query</span>
+  - <span class="code-prop">from:</span> <span class="code-string">get_query</span>
+    <span class="code-prop">to:</span> <span class="code-string">search</span>
+  - <span class="code-prop">from:</span> <span class="code-string">search</span>
+    <span class="code-prop">to:</span> <span class="code-string">END</span>`} /></div>
             </div>
           </div>
           <!-- Text on bottom -->
